2007-02-03  Gavin Salam  <salam@lpthe.jussieu.fr>

	* added files needed to turn this into a semi-proper release

	
